Remove ambiguity in the RequestBuilder when using request URL parameters and parameters intended to be sent the body as application/x-www-form-urlencoded data.